# devspace

./: .editorconfig  .gitignore  AGENTS.md  ASSISTANT.md  CLAUDE.md  CODEX.md  COPILOT.md  Cargo.toml  DEPENDENCIES.md  NOTES.md  README.md  SETUP.md  TODO.md  deny.toml  sandbox.sh
.github/workflows/: build.yml  ci.yml  dependency-health.yml  deps.yml  release.yml
docs/: architecture.md
src/: cli.rs  config.rs  dotfiles.rs  environment.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  profile.rs  toolset.rs  ui.rs  workspace.rs
src/commands/: check.rs  cleanup.rs  clone_cmd.rs  env.rs  init.rs  mod.rs  profiles.rs  reset.rs  self_cmd.rs  status.rs  sync.rs  update.rs  use_profile.rs
src/config/: config.rs  dotfiles.rs  environment.rs  mod.rs  profile.rs
src/installers/: github.rs  mod.rs  ubi.rs
src/util/: xdg.rs
templates/profile/: .devspaceignore  .devwsignore  .dwsignore  .gitignore  README.md  cli.toml  config.toml  dws.toml  macos.toml  tools.toml
templates/profile/config/bash/: .bashrc
templates/profile/config/fish/: config.fish
templates/profile/config/zsh/: .zshrc
templates/profile/manifests/: tools-macos.toml
tests/: cli_test.rs
tests/integration/: cli_test.rs
