[package]
name = "devspace"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Carter (@ascarter)"]
description = "Personal development environment manager"
repository = "https://github.com/ascarter/devspace"
license = "MIT"
keywords = ["dotfiles", "environment", "tools", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"

[[bin]]
name = "devspace"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
