[package]
name = "devws"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Carter (@ascarter)"]
description = "Developer Workspace - Personal development environment manager"
repository = "https://github.com/ascarter/devws"
license = "MIT"
keywords = ["dotfiles", "environment", "tools", "devops", "workspace"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2.0"
tempfile = "3.12"

[[bin]]
name = "devws"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
