[package]
name = "dws"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Carter (@ascarter)"]
description = "Developer workspace manager - Manage your dotfiles and dev tools"
repository = "https://github.com/ascarter/dws"
license = "MIT"
keywords = ["dotfiles", "environment", "tools", "devops", "workspace"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
directories = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
whoami = "1.5"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread"] }
regex = "1.11"

walkdir = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
url = "2.5"
anstyle = "1.0"
is-terminal = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2.0"
tempfile = "3.12"
rstest = "0.23"

[[bin]]
name = "dws"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
